--- a/Project Development Phase/Sprint 3/templates/cart.html
+++ b/Project Development Phase/Sprint 3/templates/cart.html
@@ -37,42 +37,78 @@
 </div>
 
 
-<!--Account page-->
+<!----cart items details-->
 
-<div class="account-page">
-  <div class="container">
-    <div class="row">
-      <div class="col-2">
-        <img src="images/background.jpg" width="50%">
-      </div>
-
-      <div class="col-2">
-        <div class="form-container">
-          <div class="form-btn">
-            <span onclick="login()">Login</span>
-            <span onclick="register()">Register</span>
-            <hr id="Indicator">
+<div class="small-container cart-page">
+  <table>
+    <tr>
+      <th>Product</th>
+      <th>Quantity</th>
+      <th>Subtotal</th>
+    </tr>
+    <tr>
+      <td>
+        <div class="cart-info">
+          <img src="images/buy-1.jpg">
+          <div>
+            <p>Red Tee(PUMA)</p>
+            <p>Price: Rs.1100</p>
+            <a href="cart.html">Remove</a>
           </div>
-
-          <form id="LoginForm">
-            <input type="text" placeholder="Username"> 
-            <input type="password" placeholder="Password">
-            <input type="email" placeholder="Email Address">
-            <input type="" placeholder="Mobile Number">
-            <button type="submit" class="btn">Get OTP</button>
-            <button type="submit" class="btn">Login</button>
-            
-          </form>
-
-          <form id="RegForm">
-            <input type="text" placeholder="Username"> 
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
-            <button type="submit" class="btn">Register</button>
-          </form>
         </div>
-      </div>
-    </div>
+      </td>
+      <td><input type="number" value="1"></td>
+      <td>Rs.1100</td>
+    </tr>
+
+    <tr>
+      <td>
+        <div class="cart-info">
+          <img src="images/buy-2.jpg">
+          <div>
+            <p>HRX Sports</p>
+            <p>Price: Rs.2299</p>
+            <a href="cart.html">Remove</a>
+          </div>
+        </div>
+      </td>
+      <td><input type="number" value="1"></td>
+      <td>Rs.2299</td>
+    </tr>
+
+    <tr>
+      <td>
+        <div class="cart-info">
+          <img src="images/buy-3.jpg">
+          <div>
+            <p>Van Heusen Track Pant</p>
+            <p>Price: Rs.1599</p>
+            <a href="cart.html">Remove</a>
+          </div>
+        </div>
+      </td>
+      <td><input type="number" value="1"></td>
+      <td>Rs.1599</td>
+    </tr>
+  </table>
+
+  <div class="total-price">
+    <table>
+      <tr>
+        <td>Subtotal</td>
+        <td>Rs.4998</td>
+      </tr>
+
+      <tr>
+        <td>Tax</td>
+        <td>Rs.599.76</td>
+      </tr>
+
+      <tr>
+        <td>Total</td>
+        <td>Rs.5597.76</td>
+      </tr>
+    </table>
   </div>
 </div>
 
@@ -115,41 +151,18 @@
     <p class="copyright">Copyright 2022 - FASHION  STORE</p>
   </div>
 </div>
-
 <script>
   var MenuItems = document.getElementById("MenuItems");
-
   MenuItems.style.maxHeight = "0px";
-
   function menutoggle(){
     if(MenuItems.style.maxHeight == "0px")
     {
       MenuItems.style.maxHeight = "200px"
     }
-    else
-    {
+    else{
       MenuItems.style.maxHeight = "0px"
     }
   }
-</script>
-
-<!--js for toggle form-->
-<script>
-  var LoginForm = document.getElementById("LoginForm");
-  var RegForm = document.getElementById("RegForm");
-  var Indicator = document.getElementById("Indicator");
-
-    function register(){
-      RegForm.style.transform = "translateX(0px)";
-      LoginForm.style.transform = "translateX(0px)";
-      Indicator.style.transform = "translateX(100px)";
-    }
-
-    function login(){
-      RegForm.style.transform = "translateX(300px)";
-      LoginForm.style.transform = "translateX(300px)";
-      Indicator.style.transform = "translateX(0px)";
-    }
 </script>
 
 </body>
