--- a/Project Development Phase/Sprint 2/templates/home1.html
+++ b/Project Development Phase/Sprint 2/templates/home1.html
@@ -24,7 +24,7 @@
     </head>
     
         
-    <body>
+    <body style="background-color:rgb(198, 233, 238) ;">
        <section id="header">
         <div class="main">
             <div class="navbar">
