--- a/Project Development Phase/Sprint 2/templates/home1.html
+++ b/Project Development Phase/Sprint 2/templates/home1.html
@@ -82,7 +82,7 @@
         </section>
         <section id="product1" class="section-p1">
             <h2>Featured products</h2>
-            <p>Summer collection New Morden Design</p>
+            <p>Summer collection New Modren Design</p>
             <div class="pro-container">
               <div class="pro">
                <img src="/static/img/products/f1.jpg" alt="">
