--- a/Project Development Phase/Sprint 3/templates/homepage.html
+++ b/Project Development Phase/Sprint 3/templates/homepage.html
@@ -1,4 +1,4 @@
-
+<html>
     <head>
         <title> FASHIONS </title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
