--- a/Project Development Phase/Sprint 2/templates/index.html
+++ b/Project Development Phase/Sprint 2/templates/index.html
@@ -279,7 +279,7 @@
         <div class="main">
             <div class="navbar">
                 <div class="icon">
-                    <h2 class="logo">MSB FASHIONS</h2>
+                    <h2 class="logo">SMART FASHIONS</h2>
                 </div>
 
                 <div class="menu">
