--- a/Final Deliverables/code/static/pay.css
+++ b/Final Deliverables/code/static/pay.css
@@ -92,7 +92,7 @@
   background: #2ecc71;
 }
 body{
-  background-color: pink;
+  background-color: rgba(204, 27, 240, 0.807);
 }
 a{
     width: 100px;
