--- a/Final Deliverables/code/static/profilestyle.css
+++ b/Final Deliverables/code/static/profilestyle.css
@@ -76,7 +76,7 @@ h1{
 
 .wrapper .name{
   position: relative;
-  width: 250px;
+  width: auto;
   border: none;
   outline: none;
   padding: 12px 0;
