--- a/Final Deliverables/code/templates/add.html
+++ b/Final Deliverables/code/templates/add.html
@@ -61,7 +61,7 @@
                       <div class="des">
                         <h3 class="productname">sunny</h3>
                         <span>adidas</span>
-                          <h5>Cartoon Astronaut T-shirts</h5>
+                          <h5>T-shirts</h5>
                            <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -79,7 +79,7 @@
                      <div class="des">
                        <h3 class="productname">Jhony</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -97,7 +97,7 @@
                      <div class="des">
                        <h3 class="productname">summer</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -115,7 +115,7 @@
                      <div class="des">
                        <h3 class="productname">Dany</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -133,7 +133,7 @@
                      <div class="des">
                        <h3 class="productname">Aegon</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -151,7 +151,7 @@
                      <div class="des">
                        <h3 class="productname">Thomas</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -169,7 +169,7 @@
                      <div class="des">
                        <h3 class="productname">vikram</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -187,7 +187,7 @@
                      <div class="des">
                        <h3 class="productname">Thalapathy</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -205,7 +205,7 @@
                      <div class="des">
                        <h3 class="productname">Thala</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -223,7 +223,7 @@
                      <div class="des">
                        <h3 class="productname">Ragnar</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -241,7 +241,7 @@
                      <div class="des">
                        <h3 class="productname">Wallter</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -259,7 +259,7 @@
                      <div class="des">
                        <h3 class="productname">Hisenberg</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -277,7 +277,7 @@
                      <div class="des">
                        <h3 class="productname">Mia</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -295,7 +295,7 @@
                      <div class="des">
                        <h3 class="productname">Leah</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -313,7 +313,7 @@
                      <div class="des">
                        <h3 class="productname">Jhon Snow</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -331,7 +331,7 @@
                      <div class="des">
                        <h3 class="productname">Deamend</h3>
                        <span>adidas</span>
-                         <h5>Cartoon Astronaut T-shirts</h5>
+                         <h5>T-shirts</h5>
                           <div class="star">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
@@ -399,9 +399,9 @@
 <footer>
   <h1>Contact</h1>
   <ul>
-     <li>Phone : +91 9876543210</li><br>
-     <li>Email : smartfashionibm@gmail.com</li>
-     <li>Address : N0:6 , Vivekananthar theru,<br>  Dubai kurukkusanthu,<br>Dubai main road ,<br> Dubai </li><br>
+    <li>Phone : +919123456780</li><br>
+    <li>Email : smartfashion@gmail.com</li>
+    <li>Address     :N0:33 , Abhudhabi street,<br>  Dubai kurukkusanthu,<br>Dubai main road ,<br> Dubai </li><br>      
   </ul>
     
 
