--- a/Final Deliverables/code/templates/admin.html
+++ b/Final Deliverables/code/templates/admin.html
@@ -278,7 +278,7 @@
         <div class="main">
             <div class="navbar">
                 <div class="icon">
-                    <h2 class="logo">MSB FASHIONS</h2>
+                    <h2 class="logo">SFR FASHIONS</h2>
                 </div>
 
                 <div class="menu">
