--- a/Final Deliverables/code/templates/cart.html
+++ b/Final Deliverables/code/templates/cart.html
@@ -62,7 +62,7 @@
            <div class="des">
             <span>adidas</span>
             
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -78,7 +78,7 @@
            <img src="/static/img/products/f2.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -94,7 +94,7 @@
            <img src="/static/img/products/f3.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -110,7 +110,7 @@
            <img src="/static/img/products/f4.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -126,7 +126,7 @@
            <img src="/static/img/products/f5.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -142,7 +142,7 @@
            <img src="/static/img/products/f6.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -158,7 +158,7 @@
            <img src="/static/img/products/f7.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -174,7 +174,7 @@
            <img src="/static/img/products/f8.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -191,7 +191,7 @@
            <img src="/static/img/products/n1.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -207,7 +207,7 @@
            <img src="/static/img/products/n2.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -223,7 +223,7 @@
            <img src="/static/img/products/n3.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -239,7 +239,7 @@
            <img src="/static/img/products/n4.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -255,7 +255,7 @@
            <img src="/static/img/products/n5.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -271,7 +271,7 @@
            <img src="/static/img/products/n6.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -287,7 +287,7 @@
            <img src="/static/img/products/n7.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -303,7 +303,7 @@
            <img src="/static/img/products/n8.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -338,10 +338,10 @@
     <footer>
       <h1>Contact</h1>
       <ul>
-         <li>Phone : +919876543214</li><br>
-         <li>Email : Fashion@gmail.com</li>
-         <li>Address     :N0:6 , Vivekananthar theru,<br>  Dubai kurukkusanthu,<br>Dubai main road ,<br> Dubai </li><br>
-      </ul>
+         <li>Phone : +919123456780</li><br>
+         <li>Email : smartfashion@gmail.com</li>
+         <li>Address     :N0:33 , Abhudhabi street,<br>  Dubai kurukkusanthu,<br>Dubai main road ,<br> Dubai </li><br>      
+        </ul>
         
   
     </footer>
