--- a/Final Deliverables/code/templates/homepage.html
+++ b/Final Deliverables/code/templates/homepage.html
@@ -1,6 +1,6 @@
-<html lang="en">
+
     <head>
-        <title> FASHIONS </title>
+        <title> FASHIONS</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 
         
@@ -101,7 +101,7 @@ ul li a:hover{
 .btn{
     width: 100px;
     height: 40px;
-    background:transparent ;
+    background:rgb(98, 246, 152) ;
     border: 2px solid rgb(98, 246, 152);
     margin-top: 13px;
     color: #ffff;
@@ -302,7 +302,7 @@ ul li a:hover{
   }
  body{
     background-color:pink;
-    background-image: url("https://t4.ftcdn.net/jpg/03/09/86/97/360_F_309869755_IquCHHxF7YABo2odctUGEjMrgVDSM8qV.jpg");
+    background-image: url("/static/image.jpeg");
     height: 90vh;
     width: 100%;
     background-size: cover;
