--- a/Final Deliverables/code/templates/index.html
+++ b/Final Deliverables/code/templates/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <title> SMART FASHIONS </title>
+        <title> FASHIONS</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
         
     </head>
@@ -100,10 +99,10 @@
         .btn{
             width: 100px;
             height: 40px;
-            background:transparent;
-            border: 2px solid rgba(98, 246, 152);
+            background:rgb(98, 246, 152) ;
+            border: 2px solid rgb(98, 246, 152);
             margin-top: 13px;
-            color: rgb(239, 242, 249);
+            color: #ffff;
             font-size: 15px;
             border-bottom-right-radius: 5px;
             border-bottom-right-radius: 5px;
@@ -156,7 +155,7 @@
         
         .content .cn a{
             text-decoration: none;
-            color: rgba(121, 153, 233, 0.843);
+            color: #000;
             transition:  .3s ease;
         }
         
@@ -265,7 +264,7 @@
         }
         body{
             background-color:pink;
-            background-image: url("https://images.unsplash.com/photo-1483985988355-763728e1935b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b25saW5lJTIwc2hvcHBpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+            background-image: url("/static/image.jpeg");
             height: 90vh;
             width: 100%;
             background-size: cover;
@@ -279,7 +278,7 @@
         <div class="main">
             <div class="navbar">
                 <div class="icon">
-                    <h2 class="logo">SMART FASHIONS</h2>
+                    <h2 class="logo">SFR FASHIONS</h2>
                 </div>
 
                 <div class="menu">
@@ -287,7 +286,7 @@
                         
                         <li><a href="/admin">ADMIN</a></li>
                     
-                      
+                      >
                      
                      
                     </ul>
@@ -314,7 +313,7 @@
 
                         <p class="link">Don't have an account<br>
                         <a href="/reg">Sign up </a> here</a></p>
-            
+                        
                         </form>
                       
                     </div>
