--- a/Final Deliverables/code/templates/page2.html
+++ b/Final Deliverables/code/templates/page2.html
@@ -62,7 +62,7 @@
            <div class="des">
             <span>adidas</span>
             
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -78,7 +78,7 @@
            <img src="/static/boys/2.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -94,7 +94,7 @@
            <img src="/static/boys/3.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -110,7 +110,7 @@
            <img src="/static/boys/4.png" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -126,7 +126,7 @@
            <img src="/static/boys/5.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -142,7 +142,7 @@
            <img src="/static/boys/6.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -158,7 +158,7 @@
            <img src="/static/boys/7.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -174,7 +174,7 @@
            <img src="/static/boys/8.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -191,7 +191,7 @@
            <img src="/static/boys/9.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -207,7 +207,7 @@
            <img src="/static/boys/10.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -223,7 +223,7 @@
            <img src="/static/boys/11.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -239,7 +239,7 @@
            <img src="/static/boys/12.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -255,7 +255,7 @@
            <img src="/static/boys/13.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -271,7 +271,7 @@
            <img src="/static/boys/14.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -287,7 +287,7 @@
            <img src="/static/boys/15.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -303,7 +303,7 @@
            <img src="/static/boys/16.jpg" alt="">
            <div class="des">
             <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
+            <h5>T-shirts</h5>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
