--- a/Final Deliverables/code/templates/pay.html
+++ b/Final Deliverables/code/templates/pay.html
@@ -94,7 +94,7 @@
          <div class="popup" id="popup">
            <img src="ticker.png">
            <h2>Thank You</h2>
-           <p>Payment Successful. Thanks</p>
+           <p>Payment Successful. Thank You</p>
            <a href="/home1">
            <button type="button" onclick="closePopup()">OK</button></a>
          </div>
