--- a/Final Deliverables/code/templates/reg.html
+++ b/Final Deliverables/code/templates/reg.html
@@ -1,8 +1,6 @@
-
-<html lang="en">
-    
+<html>
     <head>
-        <title> SFRA </title>
+        <title> FASHIONS </title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     </head>
     <style>
@@ -100,7 +98,7 @@ ul li a:hover{
 .btn{
     width: 100px;
     height: 40px;
-    background:transparent;
+    background:rgb(98, 246, 152) ;
     border: 2px solid rgb(98, 246, 152);
     margin-top: 13px;
     color: #ffff;
@@ -225,7 +223,7 @@ ul li a:hover{
 .btnn{
     width: 240px;
     height: 40px;
-    background: rgb(34, 235, 107);
+    background: rgb(98, 246, 152);
     border: none;
     margin-top: 30px;
     font-size: 18px;
@@ -237,7 +235,7 @@ ul li a:hover{
 
 .btnn:hover{
     background: #fff;
-    color: rgb(202, 98, 246);
+    color: rgb(98, 246, 152);
 }
 
 .btnn a{
@@ -265,7 +263,7 @@ ul li a:hover{
 }
 body{
     background-color:pink;
-    background-image: url("https://images.unsplash.com/photo-1483985988355-763728e1935b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b25saW5lJTIwc2hvcHBpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+    background-image: url("/static/image.jpeg");
     height: 90vh;
     width: 100%;
     background-size: cover;
@@ -278,7 +276,7 @@ body{
         <div class="main">
             <div class="navbar">
                 <div class="icon">
-                    <h2 class="logo">SMART FASHIONS</h2>
+                    <h2 class="logo">SFR FASHIONS</h2>
                 </div>
 
                 <div class="menu">
