--- a/Final Deliverables/code/templates/single1.html
+++ b/Final Deliverables/code/templates/single1.html
@@ -104,7 +104,7 @@
        <img src="/static/img/products/n1.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -120,7 +120,7 @@
        <img src="/static/img/products/n2.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -136,7 +136,7 @@
        <img src="/static/img/products/n3.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -152,7 +152,7 @@
        <img src="/static/img/products/n4.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
